<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 公用 -->
    <string name="app_name">烘烤运维手机应用</string>
    <string name="select">查询</string>
    <string name="choose">选择</string>

    <!-- 主菜单 -->
    <string name="title_activity_main">主菜单</string>
    <string name="energy_saving_data">节能数据</string>
    <string name="real_time_data">实时状态</string>
    <string name="warning_info">警告信息</string>
    <string name="system_set">系统设置</string>
    <string name="quit">退出</string>

    <!-- 节能数据 -->
    <string name="title_activity_energy_saving_data">节能数据</string>
    <string name="factory">炼钢厂</string>
    <string name="selectDatetime">日期</string>
    <string name="intervalMark">~</string>
    <string name="select_factory_name">炼钢厂选择</string>

    <!-- 警告信息 -->
    <string name="title_activity_warning_info">警告信息</string>
    <string name="warningDatetime">报警日期</string>

    <!-- 系统设置 -->
    <string name="title_activity_system_set">系统设置</string>
    <string name="waringFactory">报警炼钢厂</string>
    <string name="waringTimeArea">报警时间段</string>
    <string name="pollingInterval">轮询时间间隔</string>
    <string name="title_activity_multi_factory_info">报警炼钢厂</string>
    <string name="quitWhole">完全退出</string>
    <string name="back">&lt;&#x0020;返回</string>
    <string name="title_activity_real_time_data">实时状态</string>
    <string name="title_activity_factory_name_info">选择炼钢厂</string>
    <string name="action_settings">设置</string>

    <drawable name="light_gray">#474747</drawable>
    <drawable name="light_green">#CCFFFF</drawable>

    <string name="title_activity_factory_info">选择钢厂</string>
    <string name="promptInfoFactory">请点击选择钢厂</string>
    <string name="title_activity_warning_interval">报警时间段</string>

    <!-- 服务器信息 -->
    <string name="title_activity_server_info">服务器信息</string>
    <string name="serverInfo">服务器信息</string>
    <string name="serverIp">服务器IP地址</string>
    <string name="serverPort">服务器端口</string>
    <string name="htServerIp">请输入服务器IP地址</string>
    <string name="htServerPort">请输入服务器端口</string>
    <string name="save">保存</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="input_prompt_server_info">请输入完整的服务器端信息</string>
    <string name="input_prompt_select_date">请输入查询日期</string>
    <string name="msg_error_date_start_end">查询日期的起始日期不能超过结束日期</string>
    <string name="msg_error_date_interval">查询日期的区间不能超过1个月</string>
    <string name="msg_error__date_format">请输入正确的日期格式</string>
    <string name="msg_error_factory">请输入钢厂信息</string>
    <string name="msg_error_project">请输入项目信息</string>
    <string name="msg_info_date">请选择日期</string>
    <string name="system_error">系统错误，请联系软件提供商。</string>
    <string name="error_select_result_zero">您查询的数据不存在。</string>
    <string name="error_network_connected">无法连接至服务器，请检查你的网络设置或稍后重试。</string>
    <string name="notificationTitle">点击查看相关警告信息</string>
    <!-- 网络连接错误提示 -->
    <string name="nw_error_1">请先检查您的网络连接是否正常，如果正常，再输入服务器地址信息。</string>
    
    <!-- 项目界面 -->
    <string name="title_activity_projects">项目</string>
    <string name="prompt_info_project">请点击选择项目</string>
    
    <!-- 节能数据查询界面 -->
    <string name="msg_error_must_input_factory">请先选择钢厂信息。</string>
    
    <string name="company_name">上海安可科技股份有限公司</string>
    

</resources>
