<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >
	<RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="fill_parent"
        android:layout_height="130dp" >

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:src="@drawable/logo" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="80dp" 
        android:layout_below="@+id/relativeLayout5" >

        <Button
            android:id="@+id/btnEnergySavingData"
            android:layout_width="160dp"
            android:layout_height="wrap_content"            
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/energy_saving_data" 
            android:background="@drawable/button_shape" 
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/relativeLayout1" >

        <Button
            android:id="@+id/btnRealTimeData"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/real_time_data"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape" 
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/relativeLayout2" >

        <Button
            android:id="@+id/btnWarningInfo"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/warning_info" 
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape" 
            android:textColor="@color/white"
            />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/relativeLayout3" >

        <Button
            android:id="@+id/btnSystemSet"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/system_set" 
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape" 
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/relativeLayout4" >

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/quit" 
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape" 
            android:textColor="@color/white"
            />
    </RelativeLayout>
    
        <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/relativeLayout6" >

        <TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="30dp"
	    android:text="@string/company_name"
	    android:textColor="@color/blue" />
    </RelativeLayout>

</RelativeLayout>
