<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/navigationBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#333333" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#333333"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTitleEnergySavingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/warning_info"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selectConditionLayout"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/navigationBarLayout" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >
				<TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvFactory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/factory"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etFactoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:hint="@string/promptInfoFactory"
                    android:ems="15" >
                </EditText>
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvSelectDatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warningDatetime"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etDatatimeFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:inputType="date"
                    android:maxLength="10"
                    android:textSize="15sp" >
                </EditText>

                <TextView
                    android:id="@+id/tvInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intervalMark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etDatatimeTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:inputType="date"
                    android:maxLength="10"
                    android:textSize="15sp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSelect"
                    android:layout_width="20dip"
                    android:layout_height="wrap_content"
                    android:text="@string/select" >
                </Button>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/selectConditionLayout" >

        <ProgressBar
            android:id="@+id/pbDataLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dataListLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loadingLayout" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ListView
                android:id="@+id/lstWarningInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ListView>
        </HorizontalScrollView>
    </RelativeLayout>

</RelativeLayout>