<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/navigationBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#333333" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#333333"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTitleEnergySavingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/energy_saving_data"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selectConditionLayout"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/navigationBarLayout"
        android:background="#F5FFFA" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvFactory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/factory"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etFactory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvSelectDatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectDatetime"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etDatatimeFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/select">
                </Button>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dataListLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/selectConditionLayout" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#F5FFFA" >

            <ListView
                android:id="@+id/lstEnergySavingData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="#F5FFFA" >
            </ListView>
        </HorizontalScrollView>
    </RelativeLayout>

</RelativeLayout>