<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiFactoryInfoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/navigationBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#333333" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#333333"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWarningFactory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_multi_factory_info"
            android:textColor="#ffffff"
            android:textSize="22sp" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#3be33b"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/navigationBarLayout" >

        <ProgressBar
            android:id="@+id/pbDataLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dataListLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loadingLayout" >

        <ListView
            android:id="@+id/lvDataList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

    

</RelativeLayout>
